fix rename context modal spacing and hide/show link size

--- a/less/styles.less
+++ b/less/styles.less
@@ -221,7 +221,6 @@ form {
 .hide-show {
 	align-self: flex-start;
 	span {
-		font-size: @font-size * 0.75;
 		text-decoration: underline;
 	}
 }
@@ -256,7 +255,7 @@ form {
 	margin-bottom: 0;
 }
 
-.contexts + .text-field, .context-box + .context-box {
+.contexts + .text-field, .context-box + .context-box, .context-box + .text-field {
 	margin: @line-height 0 0 0;
 }
 
